examples/negative/patterns/pattern_duplicate_variant_arm.kai
# Silent contract (#520 audit, category 2 / patterns): two arms
# of a `match` use the same variant `Yes(_)`. The second arm is
# unreachable. kaikai accepts both silently; the exhaustiveness
# checker should flag the second arm as redundant (and ideally
# warn about a dead arm).
#
# See examples/negative/silent_contract/README.md for follow-up.

type Maybe = N | Yes(Int)

fn f(m: Maybe) : Int = match m {
  N -> 0
  Yes(x) -> 1
  Yes(y) -> 2
}

fn main() : Int = f(N)
